# vtiger-client

./: Cargo.toml  README.md
examples/: basic_usage.rs  export_data.rs
src/: client.rs  lib.rs  types.rs
